codingkid.ninja v2.5 - Net neutrality update
Check codingkid.ninja for more info.

--- a/index.html
+++ b/index.html
@@ -39,17 +39,9 @@
       <div id="content">
         <div class="sidebar sb1">
           <h2>Updates</h2>
-          <p>codingkid.ninja v2.4</p>
-          <p>Skipped 2.3 because this is a (semi-) big release. </p>
-          <p>I added a "<a title="Reviews" href="reviews.html">Reviews</a>"
-            section. I put it in Projects and in the title bar, and I updated
-            the CSS file to account for a wider menu. I also removed the "work
-            in progress" notice on the home page. I might have changed a few
-            things that I don't remember, check the <a title="codingkid.ninja Github"
-              href="https://github.com/merlin04/codingkid.ninja">codingkid.ninja
-              Github page</a>. <br>
-          </p>
-          <p>3-25-17</p>
+          <p>codingkid.ninja v2.5</p>
+          Added net neutrality notice. <br>
+          <p>6-15-17</p>
           <p><a href="updates.html">View past updates</a><br>
           </p>
         </div>
@@ -62,6 +54,36 @@
               <li> <img src="piboy-banner.png"> </li>
             </ul>
           </div>
+          <h2>codingkid.ninja supports net neutrality!</h2>
+          <p> On July 12, 2017, websites, Internet users, and online communities
+            will come together to sound the alarm about the FCC’s attack on net
+            neutrality. Learn how you can join the protest and spread the word
+            at <a href="https://www.battleforthenet.com/july12/">https://www.battleforthenet.com/july12/</a>.
+          </p>
+          <p> Right now, new FCC Chairman and former Verizon lawyer Ajit Pai has
+            a plan to destroy net neutrality and give big cable companies
+            immense control over what we see and do online. If they get their
+            way, the FCC will give companies like Comcast, Verizon, and AT&amp;T
+            control over what we can see and do on the Internet, with the power
+            to slow down or block websites and charge apps and sites extra fees
+            to reach an audience. </p>
+          <p>If we lose net neutrality, we could soon face an Internet where
+            some of your favorite websites are forced into a slow lane online,
+            while deep-pocketed companies who can afford expensive new
+            “prioritization” fees have special fast lane access to Internet
+            users – tilting the playing field in their favor. </p>
+          <p> <b>But on July 12th, the Internet will come together to stop
+              them.</b> Websites, Internet users, and online communities will
+            stand tall, and sound the alarm about the FCC’s attack on net
+            neutrality. The Battle for the Net campaign will provide tools for
+            everyone to make it super easy for your friends, family, followers
+            to take action. From the <a href="https://en.wikipedia.org/wiki/Protests_against_SOPA_and_PIPA">SOPA
+              blackout</a> to the <a href="https://en.wikipedia.org/wiki/Internet_Slowdown_Day">Internet
+              Slowdown</a>, we've shown time and time again that when the
+            Internet comes together, we can stop censorship and corruption. Now,
+            we have to do it again! Learn more and join the action here: <a href="https://www.battleforthenet.com/july12/">https://www.battleforthenet.com/july12</a></p>
+          <p><a href="https://www.battleforthenet.com/july12/"><br>
+            </a></p>
           <p>codingkid.ninja is a website documenting my code and projects.</p>
           <p>Looking for some great business cards? I recommend MOO. Use my code
             and get $15 off, which prices a pack of cards at $5!: <a href="https://refer.moo.com/s/et2sw">https://refer.moo.com/s/et2sw</a></p>
