--- a/updates.html
+++ b/updates.html
@@ -8,6 +8,19 @@
   </head>
   <body><span> </span>
     <h2><span>Updates</span></h2>
+    <h2></h2>
+    <p>codingkid.ninja v2.4</p>
+    <p>Skipped 2.3 because this is a (semi-) big release. </p>
+    <p>I added a "<a title="Reviews" href="reviews.html">Reviews</a>" section. I
+      put it in Projects and in the title bar, and I updated the CSS file to
+      account for a wider menu. I also removed the "work in progress" notice on
+      the home page. I might have changed a few things that I don't remember,
+      check the <a title="codingkid.ninja Github" href="https://github.com/merlin04/codingkid.ninja">codingkid.ninja
+        Github page</a>. <br>
+    </p>
+    <p>3-25-17</p>
+    <hr>
+    <p></p>
     <p>codingkid.ninja v2.1 </p>
     <p>Just a day after v2.0, I have another update! Here's what changed:</p>
     <p>&nbsp;+ Responsive design</p>
