Add banner thingy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   $(window).load(function() {
     $('.flexslider').flexslider();
   });
-</script> </head>
+</script> 
+  <script src="https://widget.battleforthenet.com/widget.js" async></script></head>
   <body>
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
