--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     $('.flexslider').flexslider();
   });
 </script> 
-  <script src="https://widget.battleforthenet.com/widget.js#ALWAYS_SHOW_BFTN_WIDGET" async></script></head>
+  <script src="https://widget.battleforthenet.com/widget.js" async></script></head>
   <body>
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
