--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   $(window).load(function() {
     $('.flexslider').flexslider();
   });
-</script> 
-  <script src="https://widget.battleforthenet.com/widget.js" async></script></head>
+</script> </head>
   <body>
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
@@ -40,9 +39,15 @@
       <div id="content">
         <div class="sidebar sb1">
           <h2>Updates</h2>
-          <p>codingkid.ninja v2.5</p>
-          Added net neutrality notice. <br>
-          <p>6-15-17</p>
+          codingkid.ninja v2.6<br>
+          <br>
+          I changed a few things. <br>
+          <br>
+          &nbsp;+ Added Patreon link and banner<br>
+          &nbsp;+ Added "games" section to home page<br>
+          &nbsp;+ Added <a href="microbit.html">review of BBC micro:bit</a><br>
+          &nbsp;- Removed net neutrality notice, "day of action" pop-up<br>
+          &nbsp;- Removed "theme changer coming soon" from bottom of the screen<br>
           <p><a href="updates.html">View past updates</a><br>
           </p>
         </div>
@@ -50,46 +55,21 @@
           <p>&nbsp;</p>
           <div class="flexslider">
             <ul class="slides">
+              <li> <a href="https://patreon.com/codingkid"> <img src="patreon-banner.png">
+                </a></li>
               <li><a href="usbchuck.html"><img src="usbchuck-banner.png"></a></li>
               <li> <a href="isec.html"><img src="isec-banner.png"></a></li>
-              <li> <img src="piboy-banner.png"> </li>
             </ul>
           </div>
-          <h2>codingkid.ninja supports net neutrality!</h2>
-          <p> On July 12, 2017, websites, Internet users, and online communities
-            will come together to sound the alarm about the FCC’s attack on net
-            neutrality. Learn how you can join the protest and spread the word
-            at <a href="https://www.battleforthenet.com/july12/">https://www.battleforthenet.com/july12/</a>.
-          </p>
-          <p> Right now, new FCC Chairman and former Verizon lawyer Ajit Pai has
-            a plan to destroy net neutrality and give big cable companies
-            immense control over what we see and do online. If they get their
-            way, the FCC will give companies like Comcast, Verizon, and AT&amp;T
-            control over what we can see and do on the Internet, with the power
-            to slow down or block websites and charge apps and sites extra fees
-            to reach an audience. </p>
-          <p>If we lose net neutrality, we could soon face an Internet where
-            some of your favorite websites are forced into a slow lane online,
-            while deep-pocketed companies who can afford expensive new
-            “prioritization” fees have special fast lane access to Internet
-            users – tilting the playing field in their favor. </p>
-          <p> <b>But on July 12th, the Internet will come together to stop
-              them.</b> Websites, Internet users, and online communities will
-            stand tall, and sound the alarm about the FCC’s attack on net
-            neutrality. The Battle for the Net campaign will provide tools for
-            everyone to make it super easy for your friends, family, followers
-            to take action. From the <a href="https://en.wikipedia.org/wiki/Protests_against_SOPA_and_PIPA">SOPA
-              blackout</a> to the <a href="https://en.wikipedia.org/wiki/Internet_Slowdown_Day">Internet
-              Slowdown</a>, we've shown time and time again that when the
-            Internet comes together, we can stop censorship and corruption. Now,
-            we have to do it again! Learn more and join the action here: <a href="https://www.battleforthenet.com/july12/">https://www.battleforthenet.com/july12</a></p>
-          <p><a href="https://www.battleforthenet.com/july12/"><br>
-            </a></p>
-          <p>codingkid.ninja is a website documenting my code and projects.</p>
-          <p>Looking for some great business cards? I recommend MOO. Use my code
-            and get $15 off, which prices a pack of cards at $5!: <a href="https://refer.moo.com/s/et2sw">https://refer.moo.com/s/et2sw</a></p>
-          <p>This is not a paid advertisement, although I get $15 off too!</p>
-        </div>
+          codingkid.ninja is a website documenting my code and projects. <a href="https://patreon.com/codingkid">Support
+            me on Patreon!</a><br>
+          <br>
+          I also make games and publish them on <a title="Snorachu Studios on itch.io"
+            href="https://snorachu-studios.itch.io/">itch.io</a>. Here's a list
+          of them: <br>
+          <br>
+          <iframe src="https://itch.io/embed/151982" frameborder="0" height="167"
+            width="552"></iframe></div>
         <div class="sidebar sb2">
           <h2>Portal</h2>
           <a href="https://www.raspberrypi.org/"> <img style="width: 120px; height: 142px;"
@@ -107,7 +87,6 @@
         </div>
       </div>
       <div id="footer">
-        <p>Theme changer coming soon!</p>
         <p><a href="about.html">About this site</a> | (c) 2017 codingkid.ninja.
           Site under MIT License. </p>
       </div>
