--- a/reviews.html
+++ b/reviews.html
@@ -21,17 +21,21 @@
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
             title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
-          <a title="Projects" href="stuff.html"> Projects</a> &nbsp;| Reviews&nbsp;|&nbsp;
-          <a href="https://github.com/Merlin04">Github</a><span style="color: #0000ee;">&nbsp;</span>
-          |&nbsp; <a href="Hello%20World%21.html">Test page</a>&nbsp;|&nbsp; <a
-            href="http://codingkid.weebly.com">Old site</a> </h3>
+          <a title="Projects" href="stuff.html"> Projects</a> &nbsp;|
+          Reviews&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
+            style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
+            page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old
+            site</a> </h3>
         <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
       </div>
       <p>Here are reviews of stuff. If you want to send me something to review,
         contact me on the "How did you come here?" form at codingkid.weebly.com.
         Star ratings are on a scale of one to five. </p>
       <p>&nbsp;- <a title="$5 filament review" href="5filament.html">Protoparadigm
-          $5 ProSpec PLA filament (⭐⭐⭐⭐)</a></p>
+          $5 ProSpec PLA filament ($5, ⭐⭐⭐⭐)</a></p>
+      <p>&nbsp;- <a title="BBC micro:bit review" href="microbit.html">BBC
+          micro:bit ($15, ⭐⭐⭐⭐⭐)<br>
+        </a></p>
     </div>
   </body>
 </html>
