--- a/updates.html
+++ b/updates.html
@@ -8,8 +8,11 @@
   </head>
   <body><span> </span>
     <h2><span>Updates</span></h2>
+    <p>codingkid.ninja v2.5</p>
+    <p>Added net neutrality notice. </p>
+    <p> 6-15-17</p>
     <h2></h2>
-    <p>codingkid.ninja v2.4</p>
+    <hr>codingkid.ninja v2.4
     <p>Skipped 2.3 because this is a (semi-) big release. </p>
     <p>I added a "<a title="Reviews" href="reviews.html">Reviews</a>" section. I
       put it in Projects and in the title bar, and I updated the CSS file to
