--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
     </ul>
-    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
+    
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label
+      for="nav-trigger"></label>
     <div class="site-wrap">
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
@@ -69,7 +71,7 @@
           of them: <br>
           <br>
           <iframe src="https://itch.io/embed/151982" frameborder="0" height="167"
-            width="552"></iframe></div>
+            class="snorlink"></iframe></div>
         <div class="sidebar sb2">
           <h2>Portal</h2>
           <a href="https://www.raspberrypi.org/"> <img style="width: 120px; height: 142px;"
