--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
     </ul>
-    
-    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label
-      for="nav-trigger"></label>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
     <div class="site-wrap">
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
@@ -41,15 +39,11 @@
       <div id="content">
         <div class="sidebar sb1">
           <h2>Updates</h2>
-          codingkid.ninja v2.6<br>
+          codingkid.ninja v2.7<br>
           <br>
-          I changed a few things. <br>
-          <br>
-          &nbsp;+ Added Patreon link and banner<br>
-          &nbsp;+ Added "games" section to home page<br>
-          &nbsp;+ Added <a href="microbit.html">review of BBC micro:bit</a><br>
-          &nbsp;- Removed net neutrality notice, "day of action" pop-up<br>
-          &nbsp;- Removed "theme changer coming soon" from bottom of the screen<br>
+          Added <a href="hcman.html">review of Hcman mechanical keyboard</a>. <br>
+          <p>8-1-17<a href="updates.html"><br>
+            </a></p>
           <p><a href="updates.html">View past updates</a><br>
           </p>
         </div>
@@ -70,8 +64,8 @@
             href="https://snorachu-studios.itch.io/">itch.io</a>. Here's a list
           of them: <br>
           <br>
-          <iframe src="https://itch.io/embed/151982" frameborder="0" height="167"
-            class="snorlink"></iframe></div>
+          <iframe src="https://itch.io/embed/151982" class="snorlink" frameborder="0"
+            height="167"></iframe></div>
         <div class="sidebar sb2">
           <h2>Portal</h2>
           <a href="https://www.raspberrypi.org/"> <img style="width: 120px; height: 142px;"
