--- a/reviews.html
+++ b/reviews.html
@@ -34,8 +34,9 @@
       <p>&nbsp;- <a title="$5 filament review" href="5filament.html">Protoparadigm
           $5 ProSpec PLA filament ($5, ⭐⭐⭐⭐)</a></p>
       <p>&nbsp;- <a title="BBC micro:bit review" href="microbit.html">BBC
-          micro:bit ($15, ⭐⭐⭐⭐⭐)<br>
-        </a></p>
+          micro:bit ($15, ⭐⭐⭐⭐⭐)</a></p>
+      <p>&nbsp;- <a href="hcman.html">Hcman Mechanical Gaming Keyboard ($25.99.
+          ⭐⭐⭐⭐)</a></p>
     </div>
   </body>
 </html>
