--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,16 @@
   </head>
   <body><span> </span>
     <h2><span>Updates</span></h2>
-    <p>codingkid.ninja v2.5</p>
+    <p>codingkid.ninja v2.6<br>
+      <br>
+      I changed a few things. <br>
+      <br>
+      &nbsp;+ Added Patreon link and banner<br>
+      &nbsp;+ Added "games" section to home page<br>
+      &nbsp;+ Added <a href="microbit.html">review of BBC micro:bit</a><br>
+      &nbsp;- Removed net neutrality notice, "day of action" pop-up<br>
+      &nbsp;- Removed "theme changer coming soon" from bottom of the screen</p>
+    <hr>codingkid.ninja v2.5
     <p>Added net neutrality notice. </p>
     <p> 6-15-17</p>
     <h2></h2>
