--- a/hcman.html
+++ b/hcman.html
@@ -58,8 +58,8 @@
       off entirely. <br>
       <img style="width: 892px; height: 305px;" title="Backlight on" alt="Backlight on - :-("
         src="hcman-pics/blon.jpg"><br>
-      Unfortunately, I cannot disable the Windows key LED without disabling it.
-      <br>
+      Unfortunately, I cannot disable the Windows key LED without disabling the
+      functionality the key would normally provide. <br>
       <h2>More details + Overall Judgement</h2>
       I rate the Hcman mechanical keyboard 3 stars out of 5. Here are the pros
       of this keyboard:<br>
@@ -72,7 +72,8 @@
       Here are the cons:<br>
       &nbsp;- There is a big ugly "Hcman" logo. It is shiny and distracting, and
       takes away from the professional feel. <br>
-      &nbsp;- You can't turn off the Windows key's LED without disabling it. <br>
+      &nbsp;- You can't turn off the Windows key's LED without disabling the
+      key's functionality. <br>
       &nbsp;- I don't like the rainbow LED pattern.<br>
       &nbsp;- I feel like this is marketed too much towards gamers. This is a
       blue switch keyboard - not many gamers would use it. It is better for
