iSec page is complete (finally)!

--- a/isec.html
+++ b/isec.html
@@ -17,12 +17,12 @@
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
     </ul>
     <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
-    <div class="site-wrap">
+    <div style="width: 1630px;" class="site-wrap">
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
             title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
-          <a title="Projects" href="stuff.html"> Projects</a>&nbsp;|&nbsp;
-          <a title="Reviews" href="reviews.html">Reviews</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
+          <a title="Projects" href="stuff.html"> Projects</a>&nbsp;|&nbsp; <a title="Reviews"
+            href="reviews.html">Reviews</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
             style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
             page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old
             site</a> </h3>
@@ -39,24 +39,27 @@
         Here is a materials list:<br>
       </span>
       <ul>
-        <li><span style="font-family: Comfortaa,Verdana;">1x USB Hub (I used one
-            from iBoost, but it is not on Amazon anymore. Choose a small flat
-            one.)</span></li>
         <li><span style=" font-family: Comfortaa,Verdana;">1x Raspberry Pi Zero
-            v1.3. I got mine from Adafruit. <br>
+            v1.3 or Pi Zero W. The Pi Zero W will make the build much easier,
+            but I stuck with a Pi Zero 1.3 because I already had all the parts.
+          </span><br>
+          <span style="font-family: Comfortaa,Verdana;"></span></li>
+        <li><span style="font-family: Comfortaa,Verdana;">1x USB hub (if not
+            using Zero W). The best option is a person shaped hub, with limbs
+            being USB ports on wires. I got mine from Target. <br>
           </span></li>
-        <li><span style="  font-family: Comfortaa,Verdana;">1x MicroSD card, any
-            size. Make sure it is a reputable brand and will fit an OS! I like <a
-              href="https://www.amazon.com/SanDisk-Ultra-Micro-Adapter-SDSQUNC-016G-GN6MA/dp/B010Q57SEE/">this
+        <li><span style="  font-family: Comfortaa,Verdana;">1x MicroSD card,
+            preferably 8gb. Make sure it is a reputable brand and will fit an
+            OS! I like <a href="https://www.amazon.com/SanDisk-Ultra-Micro-Adapter-SDSQUNC-016G-GN6MA/dp/B010Q57SEE/">this
               one</a>.&nbsp;</span></li>
         <li><span style="   font-family: Comfortaa,Verdana;">1x USB cable. The
-            end doesn't matter, as long as one end is a USB plug. <a href="https://www.amazon.com/Belkin-Hi-Speed-USB-Cable-Feet/dp/B00004Z5M1/">This
+            type doesn't matter, as long as one end is a USB plug. <a href="https://www.amazon.com/Belkin-Hi-Speed-USB-Cable-Feet/dp/B00004Z5M1/">This
               one</a> is a good length, a good price, and has thick power
             wires.&nbsp;</span></li>
         <li><span style="    font-family: Comfortaa,Verdana;">1x USB power
-            brick. Ideally it would supply 2 amps. I haven't found a
-            super-awesome yet, but <a href="https://www.amazon.com/AmazonBasics-One-Port-USB-Wall-Charger-2-4/dp/B01F2PW4EC/">this
-              one</a> seems like a candidate.&nbsp;</span></li>
+            brick. Ideally it would supply 2 amps. I am using a Kindle Fire
+            charger. <br>
+          </span></li>
         <li><span style="     font-family: Comfortaa,Verdana;">1x Raspberry Pi
             Camera. The version doesn't matter. I am using the old camera. <br>
           </span></li>
@@ -68,22 +71,27 @@
             my camera had a battery compartment, and made noises when it
             detected motion, like "Intruder Alert! You have entered a
             no-trespassing zone! Do not touch anything!"</span></li>
-        <li><span style="        font-family: Comfortaa,Verdana;">Assorted
-            buttons. These will be used to control the camera. <br>
-          </span></li>
-        <li><span style="         font-family: Comfortaa,Verdana;">1x wifi
-            dongle. I recommend <a href="https://www.amazon.com/LinkSprite-WiFi-Dongle-for-pcDuino/dp/B01MA0RRRG/">this
+        <li><span style="         font-family: Comfortaa,Verdana;">1x WiFi
+            dongle (if not using Zero W). I recommend <a href="https://www.amazon.com/LinkSprite-WiFi-Dongle-for-pcDuino/dp/B01MA0RRRG/">this
               one</a> because it has no casing and is cheap. It is intended for
             the "pcduino" dev board, but I have tested it and it works with
             Raspberry Pi.&nbsp;</span></li>
         <li><span style="          font-family: Comfortaa,Verdana;">1x Tiny USB
-            flash drive. I used <a href="https://www.amazon.com/dp/B01BGTG41W/">this
-              one</a>. It is USB 3.0, but that doesn't matter. The drive should
-            be fairly large (in storage). <br>
+            flash drive. I am using <a href="https://www.amazon.com/dp/B01BGTG41W/">this
+              one</a>. This one is USB 3.0, but that doesn't matter. The drive
+            should be fairly large (in storage).&nbsp;</span></li>
+        <li><span style="           font-family: Comfortaa,Verdana;">1x
+            USB-microUSB mini adapter, such as <a title="CHENYANG UltraAdapter!"
+              href="https://www.amazon.com/CHENYANG-Ultra-Adapter-Connector-Tablet/dp/B015GZOHKW/">this
+              one</a>.&nbsp;</span></li>
+        <li><span style="            font-family: Comfortaa,Verdana;">1x USB
+            port (if using Zero W)</span></li>
+        <li><span style="             font-family: Comfortaa,Verdana;">Some
+            Blue-Tac. <br>
           </span></li>
       </ul>
-      <span style="font-family: Comfortaa, Verdana;">Here is the skills you need
-        to build it:<br>
+      <span style="font-family: Comfortaa, Verdana;">Here are the skills you
+        need to build it:<br>
       </span>
       <ul>
         <li><span style="font-family: Comfortaa,Verdana;">Soldering. We need
@@ -94,26 +102,59 @@
           </span></li>
         <li><span style="  font-family: Comfortaa,Verdana;">Basic Raspberry Pi
             skills. You need to be able to set up a Pi, put it on a wifi
-            network, and a few other Linux things. I will be showing how to do
-            this in the semi-guide. <br>
+            network, and a few other Linux things. <br>
           </span></li>
+        <li>3d printing. You may 3d print the camera module cover. I will not
+          supply the file because of the wide variety of different
+          models of cameras, but if you really need it, contact me by going to "Old
+          site" and fill out the form.</li>
       </ul>
-      <p><span style="font-family: Comfortaa,Verdana;">The first step of
-          building the iSec Capture is to take apart the security camera.
-          Naturally, this differs from camera to camera, but it is relatively
-          straightforward. You also need to remove all supports that are not
-          needed to close the case. <br>
-        </span></p>
-      <p><span style="font-family: Comfortaa,Verdana;">&lt;image h</span><span style="font-family: Comfortaa,Verdana;">ere&gt;</span></p>
-      <p><span style="font-family: Comfortaa,Verdana;">The next step is to set
-          up the Raspberry Pi. Install Raspbian Jessie lite. More software
-          instructions soon. <br>
-        </span></p>
-      <p><br>
-      </p>
-      <p>Will be finished soon!!<br>
-        <span style="font-family: Comfortaa,Verdana;"></span><span style="font-family: Comfortaa,Verdana;"><span
-            style="font-family: serif;"></span></span></p>
+      <ul>
+      </ul>
+      <p><span style="font-family: Comfortaa,Verdana;">I won't be going into
+          detail on how to construct this because I didn't take pictures when I
+          made it and because the construction varies depending on what fake
+          camera you use, but it is fairly simple. Here's a diagram for Pi Zero
+          1.3:</span></p>
+      <img title="iSec Diagram" alt="iSec Diagram. " src="isec-diagram.svg"><br>
+      Here's one for the Pi Zero W:<br>
+      <img title="iSec Diagram for Pi Zero W" alt="The iSec Diagram for the Raspberry Pi Zero W. "
+        src="isec-diagram-2.svg"><br>
+      Here's the finished product:<br>
+      <img style="width: 579px; height: 325px;" title="iSec Capture" alt="iSec Capture - side view"
+        src="iseccapture-pics/20171013_130502_HDR.jpg"><br>
+      <img style="width: 579px; height: 325px;" title="iSec Capture" alt="iSec Capture - rear view"
+        src="iseccapture-pics/20171013_131125.jpg"><br>
+      <img style="width: 579px; height: 325px;" title="iSec Capture" alt="iSec Capture - front view"
+        src="iseccapture-pics/20171013_131318.jpg"><br>
+      <br>
+      After this, I installed the software. I chose to use <a title="RCWI on eLinux. "
+        href="https://elinux.org/RPi-Cam-Web-Interface">RPi Cam Web Interface.</a>
+      It allows for software motion detection, which makes it great for a
+      security camera! Follow the instructions in the link to install it. Once
+      you get it set up, go to hostname.local/html in your browser to see a live
+      feed of the footage! If your motion detection is not working, change the
+      setting "Motion detect mode" to "internal".<br>
+      <br>
+      However, we still need to set up the flash drive. I haven't gotten around
+      to doing that yet, but Raspberry Pi forum member btidey contributed this
+      excellent advice:<br>
+      <br>
+      <blockquote><span class="postlink">"</span><a href="http://elinux.org/RPi_Adding_USB_Drives"
+          class="postlink">http://elinux.org/RPi_Adding_USB_Drives</a> gives a
+        good general introduction to mounting external usb drives and you should
+        be using the fstab method so it gets mounted on every boot.<br>
+        <br>
+        If you have just the one USB flash then you can use the simpler method
+        else you will need to use the UUID method as described.<br>
+        <br>
+        The mount point directory needs to be the media folder for the camera
+        e.g. <code>/var/www/html/media</code><br>
+        <br>
+        <code>sudo chown www-data:www-data folder</code> is the command used to change
+        ownership of a folder."</blockquote>
+      <br>
+      &nbsp;<br>
       <p><span style="font-family: Comfortaa, Verdana;"></span></p>
       <span style="font-family: Comfortaa, Verdana;"> </span> </div>
   </body>
