--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
       <div id="content">
         <div class="sidebar sb1">
           <h2>Updates</h2>
-          codingkid.ninja v2.7<br>
-          <br>
-          Added <a href="hcman.html">review of Hcman mechanical keyboard</a>. <br>
-          <p>8-1-17<a href="updates.html"><br>
-            </a></p>
+          <p>codingkid.ninja v2.8</p>
+          <p>This is a fairly large update. Here's what I did:</p>
+          <p>&nbsp;+ Finally finished <a title="iSec Capture" href="isec.html">iSec
+              Capture page</a>! </p>
+          <p>&nbsp;+ Added new <a title="Keyboards" href="keyboards.html">Keyboards</a>
+            page and filled it with stuff. This will get more updates in the
+            future as I get more keyboards. </p>
+          <p>&nbsp;? I need help finding a new monetization method, Patreon has
+            not earned me a penny. Help on the <a title="codingkid.ninja Github page"
+              href="https://github.com/Merlin04/codingkid.ninja">codingkid.ninja
+              Github page</a>!</p>
           <p><a href="updates.html">View past updates</a><br>
           </p>
         </div>
@@ -51,10 +57,10 @@
           <p>&nbsp;</p>
           <div class="flexslider">
             <ul class="slides">
+              <li> <a href="isec.html"><img src="isec-banner.png"></a></li>
+              <li><a href="usbchuck.html"><img src="usbchuck-banner.png"></a></li>
               <li> <a href="https://patreon.com/codingkid"> <img src="patreon-banner.png">
                 </a></li>
-              <li><a href="usbchuck.html"><img src="usbchuck-banner.png"></a></li>
-              <li> <a href="isec.html"><img src="isec-banner.png"></a></li>
             </ul>
           </div>
           codingkid.ninja is a website documenting my code and projects. <a href="https://patreon.com/codingkid">Support
