--- a/stuff.html
+++ b/stuff.html
@@ -29,6 +29,10 @@
       </div>
       <p><span>My various projects. <br>
         </span></p>
+      <a title="Keyboards" href="keyboards.html"><img style="width: 299px; height: 224px;"
+          title="Keyboards" alt="Keyboards" src="keyboards.png"></a><br>
+      <a title="Keyboards" href="keyboards.html">My keyboards. </a><br>
+      <br>
       <a href="reviews.html"><img style="width: 299px; height: 224px;" title="Reviews"
           alt="Reviews logo. " src="reviews.png"></a>
       <p><a href="reviews.html">Reviews of stuff.</a></p>
@@ -39,8 +43,8 @@
         <br>
         <a href="isec.html"><img style="width: 297px; height: 222px;" title="iSec Capture"
             alt="iSec Capture Logo" src="isec.png"></a><br>
-        (ARTICLE IN BETA) iSec Capture is a Raspberry Pi-powered IoT security
-        camera. See more <a href="isec.html">here</a>. <br>
+        iSec Capture is a Raspberry Pi-powered IoT security camera. See more <a
+          href="isec.html">here</a>. <br>
         <br>
         <img title="Pi Boy Advance" alt="Game Boy Advance Raspberry Pi Thingy" src="gba.png"><br>
         Pi Boy Advance is a Raspberry Pi based handheld console in a Game Boy
