--- a/updates.html
+++ b/updates.html
@@ -8,9 +8,12 @@
   </head>
   <body><span> </span>
     <h2><span>Updates</span></h2>
-    <p>codingkid.ninja v2.6<br>
+    <p>codingkid.ninja v2.7<br>
       <br>
-      I changed a few things. <br>
+      Added <a href="hcman.html">review of Hcman mechanical keyboard</a>. </p>
+    <p> 8-1-17<a href="updates.html"></a></p>
+    <hr>codingkid.ninja v2.6<br>
+    <p> I changed a few things. <br>
       <br>
       &nbsp;+ Added Patreon link and banner<br>
       &nbsp;+ Added "games" section to home page<br>
