The fight for net neutrality isn't over yet.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
   $(window).load(function() {
     $('.flexslider').flexslider();
   });
-</script> </head>
+</script>
+  <!--[if !(lt IE 8)]><!-->
+<script type="text/javascript">
+  (function(){
+    var e = document.createElement('script'); e.type='text/javascript'; e.async = true;
+    e.src = 'https://www.eff.org/doa/widget.min.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(e, s);
+  })();
+</script>
+<!--<![endif]-->
+
+</head>
   <body>
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
