--- a/index.html
+++ b/index.html
@@ -14,25 +14,8 @@
   $(window).load(function() {
     $('.flexslider').flexslider();
   });
-</script>
-  <!--[if !(lt IE 8)]><!-->
-<script type="text/javascript">
-  // The defaults are set below
-  var banner_config = {
-    disableDate: true, // If true, the banner shows even if the date is not yet 06/21/2016. Use for testing.
-    debug: false // Reveals any errors and debug messages. For debugging purposes only.
-  };
-  (function(){
-    var e = document.createElement('script'); e.type='text/javascript'; e.async = true;
-    e.src = 'https://www.eff.org/doa/widget.min.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(e, s);
-  })();
-</script>
-<!--<![endif]-->
-
-
-
-</head>
+</script> <script src="https://widget.battleforthenet.com/widget.js" async=""></script>
+  </head>
   <body>
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
@@ -57,15 +40,19 @@
       <div id="content">
         <div class="sidebar sb1">
           <h2>Updates</h2>
-          <p>codingkid.ninja v2.8</p>
-          <p>This is a fairly large update. Here's what I did:</p>
-          <p>&nbsp;+ Finally finished <a title="iSec Capture" href="isec.html">iSec
-              Capture page</a>! </p>
-          <p>&nbsp;+ Added new <a title="Keyboards" href="keyboards.html">Keyboards</a>
-            page and filled it with stuff. This will get more updates in the
-            future as I get more keyboards. </p>
-          <p>&nbsp;? I need help finding a new monetization method, Patreon has
-            not earned me a penny. Help on the <a title="codingkid.ninja Github page"
+          <p>codingkid.ninja v2.9</p>
+          <p>This is more of a content update, but here are the changes:</p>
+          <p>&nbsp;+ Added <a title="1UP Keyboards cable kit review" href="1up.html">review
+              of the 1UP Keyboards cable kit</a></p>
+          <p>&nbsp;+ Decided on a new versioning scheme: The next version will
+            not be v3.0, but will be 2.10. Changing the main number is for big
+            changes to the design, such as codingkid.ninja 2.0.</p>
+          <p>&nbsp;+ Officially re-added the BTFN net neutrality dialog - <a title="Battle for the Net"
+              href="https://www.battleforthenet.com/">you can still help save
+              the internet. </a><br>
+          </p>
+          <p>&nbsp;? I still need help finding a new monetization method,
+            Patreon has not earned me a penny. Help on the <a title="codingkid.ninja Github page"
               href="https://github.com/Merlin04/codingkid.ninja">codingkid.ninja
               Github page</a>!</p>
           <p><a href="updates.html">View past updates</a><br>
