--- a/updates.html
+++ b/updates.html
@@ -8,9 +8,18 @@
   </head>
   <body><span> </span>
     <h2><span>Updates</span></h2>
-    <p>codingkid.ninja v2.7<br>
-      <br>
-      Added <a href="hcman.html">review of Hcman mechanical keyboard</a>. </p>
+    <p>codingkid.ninja v2.8 </p>
+    <p>This is a fairly large update. Here's what I did:</p>
+    <p>&nbsp;+ Finally finished <a title="iSec Capture" href="isec.html">iSec
+        Capture page</a>! </p>
+    <p>&nbsp;+ Added new <a title="Keyboards" href="keyboards.html">Keyboards</a>
+      page and filled it with stuff. This will get more updates in the future as
+      I get more keyboards. </p>
+    &nbsp;? I need help finding a new monetization method, Patreon has not
+    earned me a penny. Help on the <a title="codingkid.ninja Github page" href="https://github.com/Merlin04/codingkid.ninja">codingkid.ninja
+      Github page</a>!<br>
+    <hr>codingkid.ninja v2.7<br>
+    <p> Added <a href="hcman.html">review of Hcman mechanical keyboard</a>. </p>
     <p> 8-1-17<a href="updates.html"></a></p>
     <hr>codingkid.ninja v2.6<br>
     <p> I changed a few things. <br>
