Break the Internet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   $(window).load(function() {
     $('.flexslider').flexslider();
   });
-</script> <script src="https://widget.battleforthenet.com/widget.js" async=""></script>
+</script><script type="text/javascript"> var _bftn_options = {theme: "without"};</script> <script src="https://widget.battleforthenet.com/widget.js" async=""></script>
+
   </head>
   <body>
     <ul class="navigation">
