--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="header">This website is
             not maintained anymore. </div>
         <div class="content">
-            <p>codingkid.ninja is not maintained anymore. The site is really old now and might not have accurate
+            <p>codingkid.ninja is not maintained anymore. The site hasn't been updated since December 3, 2017, and might not have accurate
                 information.</p>
             <a href="indexold.html">
                 <div class="ui button">Proceed to codingkid.ninja</div>
-            </a><a href="https://merlin04.github.io/dev">
+            </a><a href="https://benjaminsmith.dev">
                 <div class="ui button">Go to new website</div>
             </a>
         </div>
